# eggsact

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.sh  deny.toml  release.sh
.agents/skills/: debugging  (+4 more)
.skills/: debugging.md  mcp-tools.md  release.md  testing.md  text-processing.md
architecture/: agent-api.md  calculator.md  cli-binaries.md  coding-agent-integration.md  compatibility.md  generated-assets.md  machine-codes.md  mcp-server.md  overview.md  preflight.md  testing.md  text-library.md  tools.md
data/: confusables.rs
docs/: cli.md  compatibility-policy.md  contributing.md  fuzzing.md  library-api.md  mcp-tools.md  msrv.md  parity.md  release-5-status.md  release-readiness.md  release.md
fuzz/: .gitignore  Cargo.toml
fuzz/corpus/calculator_expression/: deeply_nested  nested  powers  unary_chain  units
fuzz/corpus/calculator_normalization/: spaces  unicode_spaces
fuzz/corpus/glob_matching/: bracket  question  recursive  simple
fuzz/corpus/json_pointer/: array  deeply_nested  escaped  nested  simple  tilde_escape
fuzz/corpus/markdown_fences/: mixed_fences  nested  no_lang  simple  tilde_fence  unclosed
fuzz/corpus/regex_classification/: backref  branch_reset  escaped_literal  lookahead  lookbehind
fuzz/corpus/regex_execution/: backtrack_heavy  groups  no_match  simple
fuzz/corpus/shell_tokenization/: empty_arg  escaped  metacharacters  unicode_cmd
fuzz/corpus/toml_config/: duplicate_keys  nested_tables
fuzz/corpus/unicode_inspection/: bidi  bidi_override  emoji  homoglyph  invisible_zwj
fuzz/corpus/unified_diff/: multi_hunk  no_newline  path_with_space  simple_add  unicode_path
fuzz/fuzz_targets/: calculator_expression.rs  calculator_normalization.rs  glob_matching.rs  json_pointer.rs  markdown_fences.rs  regex_classification.rs  regex_execution.rs  shell_quoting.rs  shell_tokenization.rs  toml_config.rs  unicode_inspection.rs  unified_diff.rs
plans/: 2026-07-06-agent-tooling-correctness-roadmap.md  2026-07-06-corrective-verification-pass.md  2026-07-06-final-closure-parity-ci-api-plan.md  2026-07-06-phase-01-generated-docs-release-drift.md  2026-07-06-phase-02-correctness-hardening.md  2026-07-06-phase-03-codegg-api-ergonomics.md  2026-07-06-phase-04-mcp-runtime-semantics.md  2026-07-06-phase-05-repo-diff-intelligence-tools.md  2026-07-07-ci-cleanup-polish-plan.md  2026-07-07-ci-forensics-release-record-plan.md  2026-07-07-coding-agent-hardening-roadmap.md  2026-07-07-milestone-1-docs-positioning.md  2026-07-07-milestone-2-runtime-config-hardening.md  2026-07-07-milestone-3-route-critical-contracts.md  2026-07-07-milestone-4-command-preflight-hardening.md  2026-07-07-milestone-5-schema-validation-boundaries.md  2026-07-07-milestone-6-deterministic-coding-agent-tools.md  2026-07-07-milestone-7-profiles-exposure-agent-ergonomics.md  2026-07-07-milestone-8-diagnostics-self-inspection.md  2026-07-07-milestone-9-ci-release-closure.md  2026-07-07-release-decision-record.md  2026-07-07-release-readiness-parity-acceptance-plan.md  2026-07-07-remaining-hardening-polish-plan.md  2026-07-08-corrective-verification-schema-release-pass.md  2026-07-08-crates-io-release-polish-plan.md  2026-07-08-final-ci-parity-release-followup.md  2026-07-16-release-1-execution-safety-plan.md  2026-07-16-release-2-mcp-lifecycle-plan.md  2026-07-16-release-3-state-policy-plan.md  2026-07-16-transport-hardening-roadmap.md  2026-07-17-releases-1-3-corrective-closure-plan.md  2026-07-18-release-4-verification-infrastructure-plan.md  2026-07-18-release-5-fuzzing-property-testing-plan.md  2026-07-18-releases-1-3-final-correctness-plan.md  2026-07-21-final-runtime-verification-fuzz-closure-plan.md  2026-07-21-runtime-correctness-evidence-corrective-pass.md  2026-07-22-timeout-sync-policy-final-corrective-pass.md  2026-07-23-final-cancellation-lifecycle-evidence-closure-pass.md  final-tightening-fix-plan.md  finish-priority-2-guard-test.md  (+34 more)
scripts/: generate_confusables.py
src/: lib.rs  main.rs
tests/: lib.rs  test_context_isolation.rs
(+210 files in other folders)
