[package]
name = "eggsact"
version = "1.1.3"
edition = "2021"
description = "Natural language math calculator with MCP server for AI coding agents"
license = "MIT"
readme = "README.md"
repository = "https://github.com/eggstack/eggsact"
homepage = "https://github.com/eggstack/eggsact"
documentation = "https://docs.rs/eggsact"
keywords = ["math", "calculator", "natural-language", "mcp", "nlp"]
categories = ["command-line-utilities", "mathematics", "science"]
authors = ["David Bowman"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
fancy-regex = "0.18"
ahash = "0.8"
sha2 = "0.10"
sha1 = "0.10"
md5 = "0.7"
crc32fast = "1.4"
regex = "1.10"
urlencoding = "2.1"
unicode-normalization = "0.1"
unicode-segmentation = "1.11"
unicode_names2 = "3.1"
unicode-general-category = "1.1"
caseless = "0.2"
toml = "0.8"
toml_edit = "0.22"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]

[[bin]]
name = "generate-docs"
path = "src/bin/generate_docs.rs"

[[test]]
name = "lib"
path = "tests/lib.rs"
